Added type form

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
           </li>
         </ul>
       </div>
+
+      <button data-tf-popup="L4xinJDk" data-tf-opacity="100" data-tf-size="100" data-tf-iframe-props="title=Contact form" data-tf-transitive-search-params data-tf-medium="snippet">Contact me!</button>
+      <script src="https://embed.typeform.com/next/embed.js"></script>  
     </div>
 
   
